# cram

./: .gitignore  AUTHORS  GB  Makefile  Makefile.in  Makefile.old  README  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac  cram
a.out.dSYM/Contents/: Info.plist
a.out.dSYM/Contents/Resources/DWARF/: a.out
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cram.dSYM/Contents/: Info.plist
cram.dSYM/Contents/Resources/DWARF/: cram
src/: .mbc.h.swp  Makefile  Makefile.am  Makefile.in  blah  cpu.c  cpu.h  cram.h  loader.c  loader.h  loader.s  mbc.c  mbc.h  mem.S  mem.c  mem.c.fast  mem.c.slow  mem.h  mem.h.slow  mem.s  opcode.c  opcode.h  opcode.s  sdlvideo.c  sdlvideo.h  sound.c  sound.h  video.c  video.h
src/.deps/: cpu.Po  loader.Po  mbc.Po  mem.Po  opcode.Po  sdlvideo.Po  sound.Po  video.Po
